@@ -6,6 +6,8 @@ Version 5.25.0
 
 Fixed: Issue #672: FreeBSD: Support I/O statistics for raid and encrypted partitions.
 
+Fixed: Issue #676: Process CPU usage is reported always as 0.0% just after process start
+
 
 Version 5.24.0
 
